AlertMgr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: alertmanager
    namespace: monitoring
spec:
    replicas: 1
    selector:
        matchLabels:
            app: alertmanager
    template:
        metadata:
            name: alertmanager
            labels:
                app: alertmanager
        spec:
            containers:
                - name: alertmanager
                  image: prom/alertmanager:latest
                  args:
                      - '--config.file=/etc/alertmanager/config.yml'
                      - '--storage.path=/alertmanager'
                  ports:
                      - name: alertmanager
                        containerPort: 9093
                  resources:
                      requests:
                          cpu: 500m
                          memory: 500M
                      limits:
                          cpu: 1
                          memory: 1Gi
                  volumeMounts:
                      - name: config-volume
                        mountPath: /etc/alertmanager
                      - name: alertmanager
                        mountPath: /alertmanager
            volumes:
                - name: config-volume
                  configMap:
                      name: alertmanager-config
                - name: alertmanager
                  emptyDir: {}
