AlertMgr/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: alertmanager-service
    namespace: monitoring
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9093'
spec:
    selector:
        app: alertmanager
    type: ClusterIP
    ports:
        - port: 9093
          targetPort: 9093
          name: alertmanager
